@@ -12,6 +12,7 @@ Dist::Zilla::Plugin::CheckChangesHasContent = 0
 Dist::Zilla::Plugin::CompileTests = 0
 Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::Git = 0
+Dist::Zilla::Plugin::MakeMaker::Awesome = 0
 Dist::Zilla::Plugin::NoTabsTests = 0
 Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::Repository = 0.12
